Implemented History List and fixed History Buttons