@@ -1,87 +1,76 @@
 package com.rarchives.ripme.ui;
 
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-
-import org.apache.commons.io.IOUtils;
+import javafx.beans.property.SimpleListProperty;
+import javafx.collections.FXCollections;
 import org.json.JSONArray;
-import org.json.JSONException;
 import org.json.JSONObject;
 
-public class History {
-    private final List<HistoryEntry> list;
-    private static final String[] COLUMNS = new String[] {
-        "URL",
-        "created",
-        "modified",
-        "#",
-        ""
-    };
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
+import java.util.List;
+
+public class History extends SimpleListProperty<HistoryEntry> {
+    //    private final List<HistoryEntry> list;//Refactored to extend list instead
+//    private static final String[] COLUMNS = new String[]{
+//            "URL",
+//            "created",
+//            "modified",
+//            "#",
+//            ""
+//    };
 
     public History() {
-        this.list = new ArrayList<>();
+        super(FXCollections.observableArrayList());
     }
 
-    public void add(HistoryEntry entry) {
-        list.add(entry);
-    }
-    public void remove(HistoryEntry entry) {
-        list.remove(entry);
-    }
-    public void remove(String url){ // TODO performance
-        for (int i = 0; i < list.size(); i++){
-            if (list.get(i).url.equals(url)){
-                list.remove(i);
-                break;
+//    @Override
+//    public boolean add(HistoryEntry entry) {
+//        return super.add(entry);
+//    }
+//
+//    @Override
+//    public boolean remove(Object entry) {
+//        return super.remove(entry);
+//    }
+
+    public boolean remove(String url) { // TODO performance
+        for (int i = 0; i < super.size(); i++) {
+            if (super.get(i).url.equals(url)) {
+                super.remove(i);
+                return true;
             }
         }
-    }
-    public void remove(int index) {
-        list.remove(index);
-    }
-    public void clear() {
-        list.clear();
-    }
-    public HistoryEntry get(int index) {
-        return list.get(index);
-    }
-    public String getColumnName(int index) {
-        return COLUMNS[index];
-    }
-    public int getColumnCount() {
-        return COLUMNS.length;
-    }
-    public Object getValueAt(int row, int col) {
-        HistoryEntry entry = this.list.get(row);
-        switch (col) {
-        case 0:
-            return entry.url;
-        case 1:
-            return dateToHumanReadable(entry.startDate);
-        case 2:
-            return dateToHumanReadable(entry.modifiedDate);
-        case 3:
-            return entry.count;
-        case 4:
-            return entry.selected;
-        default:
-            return null;
-        }
-    }
-    private String dateToHumanReadable(Date date) {
-        SimpleDateFormat sdf = new SimpleDateFormat("yyyy/MM/dd");
-        return sdf.format(date);
+        return false;
     }
 
-    public boolean containsURL(String url) {
-        for (HistoryEntry entry : this.list) {
+//    @Override
+//    public HistoryEntry remove(int index) {
+//        return super.remove(index);
+//    }
+//
+//    @Override
+//    public void clear() {
+//        super.clear();
+//    }
+
+//    public HistoryEntry get(int index) {
+//        return list.get(index);
+//    }
+
+//    public String getColumnName(int index) {
+//        return COLUMNS[index];
+//    }
+//
+//    public int getColumnCount() {
+//        return COLUMNS.length;
+//    }
+
+    public boolean containsURL(String url) { //TODO This gets really slow with large lists
+        for (HistoryEntry entry : this) {
             if (entry.url.equals(url)) {
                 return true;
             }
@@ -89,8 +78,8 @@ public class History {
         return false;
     }
 
-    public HistoryEntry getEntryByURL(String url) {
-        for (HistoryEntry entry : this.list) {
+    public HistoryEntry getEntryByURL(String url) throws RuntimeException {
+        for (HistoryEntry entry : this) {
             if (entry.url.equals(url)) {
                 return entry;
             }
@@ -102,47 +91,54 @@ public class History {
         JSONObject json;
         for (int i = 0; i < jsonArray.length(); i++) {
             json = jsonArray.getJSONObject(i);
-            list.add(new HistoryEntry().fromJSON(json));
+            super.add(new HistoryEntry().fromJSON(json));
         }
     }
 
+    /**
+     * Loads the history from a file
+     *
+     * @param filename File to load
+     * @throws IOException if something goes wrong
+     */
     public void fromFile(String filename) throws IOException {
-        try (InputStream is = new FileInputStream(filename)) {
-            String jsonString = IOUtils.toString(is);
-            JSONArray jsonArray = new JSONArray(jsonString);
-            fromJSON(jsonArray);
-        } catch (JSONException e) {
-            throw new IOException("Failed to load JSON file " + filename + ": " + e.getMessage(), e);
-        }
+        String jsonString = Files.readString(Paths.get(filename), StandardCharsets.UTF_8);
+        JSONArray jsonArray = new JSONArray(jsonString);
+        fromJSON(jsonArray);
     }
 
     public void fromList(List<String> stringList) {
         for (String item : stringList) {
             HistoryEntry entry = new HistoryEntry();
             entry.url = item;
-            list.add(entry);
+            super.add(entry);
         }
     }
 
     private JSONArray toJSON() {
         JSONArray jsonArray = new JSONArray();
-        for (HistoryEntry entry : list) {
+        for (HistoryEntry entry : this) {
             jsonArray.put(entry.toJSON());
         }
         return jsonArray;
     }
 
-    public List<HistoryEntry> toList() {
-        return list;
-    }
+//    public List<HistoryEntry> toList() {
+//        return list;
+//    }
+//
+//    public boolean isEmpty() {
+//        return list.isEmpty();
+//    }
 
-    public boolean isEmpty() {
-        return list.isEmpty();
-    }
-
-    public void toFile(String filename) throws IOException {
-        try (OutputStream os = new FileOutputStream(filename)) {
-            IOUtils.write(toJSON().toString(2), os);
-        }
+    /**
+     * Save this history to a file
+     *
+     * @param filename File name to save
+     * @return the path of the new file
+     * @throws IOException if something went wrong
+     */
+    public Path toFile(String filename) throws IOException {
+        return Files.write(Paths.get(filename), toJSON().toString(1).getBytes(StandardCharsets.UTF_8), StandardOpenOption.WRITE, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
     }
 }
